###### TWE 5.2-1 RELEASED ######
2015-09-03 Sasa Bojanic <sasaboy@together.at>
   # Java 8 support
   # Shark mode: Again allowing Tool activities with System participant performer to have MANUAL finish mode (to support Quartz tool agent and similar tool agents)

2015-08-25 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improvement: increased dimensions of table for displaying DataFields, FormalParameters, XPDLStrings and I18NVariables

2015-08-24 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Fix: repositioning of XPDLString and I18N variables inside table is now working
      
2015-08-21 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Support for VariableToProcess_FETCH extended attribute
      - Improved:
         * panel for actual parameters (now considering if formal parameter is array and offering only the array variables in that case)
         * the background color of combo-box now properly set
         * the background color of list panel for selecting participants when many now properly set
         * checking and updating Variable/XPDLString/I18n variable ids inside BeanShell/JavaScript script expression
         * checking and updating I18n variable ids inside InitialValue expression
         * showing text panel instead of editable combo-box for i18n variables
         * not showing system variables/variables/xpdl strings/i18n variables for XSLT tool agent Application definition
         * now considering variable ids in the actual parameter which map to XPath application parameter ResultVariableIds
      - Fixed:
         * bug that occured sometime when updating i18n varible Id in referencing elements
         * bug that showed email panel in edit mode even in the case package is external or transient

2015-08-10 Sasa Bojanic <sasaboy@together.at>
   # Now validating unused applications and participants

2015-08-03 Sasa Bojanic <sasaboy@together.at>