@@ -11565,6 +11565,9 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
 
           <para>- Improvement: increased dimensions of table for displaying
           DataFields, FormalParameters, XPDLStrings and I18NVariables</para>
+
+          <para>- Improved validation: can't have Tool activities having both
+          start and finish mode set to MANUAL </para>
         </listitem>
 
         <listitem>
