@@ -22,6 +22,7 @@
 #Missing translation -> ERROR_UNSUPPORTED_DATA_TYPE=Data type is not supported (currently supported types are ExternalReference, Schema and basic types:BOOLEAN, STRING, INTEGER, FLOAT, DATETIME, as well as their type declaration versions)
 
 #Missing translation -> ERROR_MANUAL_START_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER='MANUAL' start mode defined for a 'Tool' activity with 'System' type participant performer
+#Missing translation -> ERROR_MANUAL_START_AND_FINISH_MODE_FOR_TOOL_ACTIVITY='MANUAL' start and finish mode defined for a 'Tool' activity
 #Missing translation -> ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY=System participant performer defined for Manual ('No implementation') activity
 
 #Missing translation -> WARNING_TOOL_AGENT_CLASS_NOT_DEFINED=Tool agent class attribute is not defined
