@@ -22,6 +22,7 @@ ERROR_UNSUPPORTED_SCRIPT=Nepodr\u017Ean skript (podr\u017Eani su text/java, text
 ERROR_UNSUPPORTED_DATA_TYPE=Tip nije podr\u017Ean (podr\u017Eani tipovi  su Eksterna referenca, Schema tip i Osnovni tipovi:Boolean, Text, Ceo broj, Realan broj, Datum, kao i Deklaracije koje sadr\u017E ove tipove)
 
 ERROR_MANUAL_START_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER='MANUAL' start mod definisan za 'Tool' aktivnost sa sistemskim u\u010Desnikom kao izvr\u0161iocem
+ERROR_MANUAL_START_AND_FINISH_MODE_FOR_TOOL_ACTIVITY='MANUAL' start i stop mod definisan za 'Tool' aktivnost
 ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY=Sistemski u\u010Desnik definisan kao izvr\u0161ilac za manualnu ('No implementation') aktivnost
 
 WARNING_TOOL_AGENT_CLASS_NOT_DEFINED=Atribut za tool agent klasu nije definisan
