@@ -31,6 +31,8 @@ public final class SharkValidationErrorIds {
 
    public static final String ERROR_MANUAL_START_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER = "ERROR_MANUAL_START_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER";
 
+   public static final String ERROR_MANUAL_START_AND_FINISH_MODE_FOR_TOOL_ACTIVITY = "ERROR_MANUAL_START_AND_FINISH_MODE_FOR_TOOL_ACTIVITY";
+
    public static final String ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY = "ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY";
 
    public static final String WARNING_TOOL_AGENT_CLASS_NOT_DEFINED = "WARNING_TOOL_AGENT_CLASS_NOT_DEFINED";
